[gd_scene load_steps=6 format=2]

[ext_resource path="res://Imagens/balao.png" type="Texture" id=1]
[ext_resource path="res://Codigos/tutoriais/tutorialInicio.gd" type="Script" id=2]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[node name="tutorialInicio" type="Node2D"]
script = ExtResource( 2 )

[node name="balao1" type="Sprite" parent="."]
visible = false
position = Vector2( 406, 622 )
scale = Vector2( 10.5, 8.56 )
texture = ExtResource( 1 )

[node name="caixaDialogo1" type="Label" parent="."]
visible = false
margin_left = 264.0
margin_top = 402.0
margin_right = 547.0
margin_bottom = 747.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Clique em uma das setas para adicionar um movimento"
align = 1
valign = 1
autowrap = true

[node name="balao2" type="Sprite" parent="."]
visible = false
position = Vector2( 1210.5, 653 )
scale = Vector2( 10.5, 8.56 )
texture = ExtResource( 1 )

[node name="caixaDialogo2" type="Label" parent="."]
visible = false
margin_left = 1068.5
margin_top = 433.0
margin_right = 1351.5
margin_bottom = 778.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Clique na lixeira para excluir o Ãºltimo movimento"
align = 1
valign = 1
autowrap = true

[node name="balao3" type="Sprite" parent="."]
visible = false
position = Vector2( 1704.5, 640 )
scale = Vector2( 10.5, 8.56 )
texture = ExtResource( 1 )

[node name="caixaDialogo3" type="Label" parent="."]
visible = false
margin_left = 1562.5
margin_top = 420.0
margin_right = 1845.5
margin_bottom = 765.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Clique no botao de iniciar para fazer o personagem mover"
align = 1
valign = 1
autowrap = true

[node name="botaoPassar" type="Button" parent="."]
margin_right = 1925.0
margin_bottom = 1073.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )

[connection signal="pressed" from="botaoPassar" to="." method="_on_botaoPassar_pressed"]
